# kbase-sdk-module-service-widget-demo

./: .gitignore  Dockerfile  ENVIRONMENT_VARIABLES.md  Makefile  README.md  RELEASE_NOTES.md  SERVICE_DESCRIPTION.toml  Taskfile  kbase.yml  mypy.ini  pyproject.toml  tox.ini
.github/: pull_request_template.md
_attic/widgets/: README.md
_attic/widgets/media_viewer/: README.md
_attic/widgets/simple1/: README.md
_attic/widgets/simplest/: index.html
_attic/widgets/status/: index.html
docs/: dynamic-service.md
docs/api/: index.md  openapi.json
docs/widgets/: design.md
etc/: config.toml.jinja  docker-compose-dev.yml  docker-compose-prod-like.yml  docker-compose-runner.yml  docker-compose-testing.yml
schema/: kbase-yml.json
scripts/: render-config.sh  run-tests.sh  start-server-dev.sh  start-server.sh
scripts/deploy/: entrypoint.sh  render-config.sh  start-server.sh
scripts/dev/: run-mypy.sh  run-tests.sh  start-server-dev.sh
sdk-compat/: Makefile  ServiceWidgetDemo.spec  compile_report.json  entrypoint.sh
src/misc/: check-openapi.py  generate-docs.py  generate-openapi.py
src/servicewidgetdemo/: main.py  model.py
src/servicewidgetdemo/lib/: auth.py  config.py  constants.py  responses.py  runtime.py  utils.py
src/servicewidgetdemo/routers/: root.py  widgets.py
src/servicewidgetdemo/service_clients/: KBaseAuth.py  Workspace.py  auth.py
src/test/: test_main.py
src/test/lib/: test_auth.py  test_config.py  test_config_module.py  test_errors.py  test_json_file.py  test_responses.py  test_utils.py
src/test/mocks/: data.py  mock_auth.py  mock_contexts.py  mock_imaginary_service.py  mock_server.py
src/test/routers/: test_root.py
src/test/service_clients/: test_KBaseAuth.py  test_auth.py
test/data/: config1.toml  config2.toml  git_info1.toml  service_description1.toml
tools/node/: Dockerfile  docker-compose.yml
widgets/media_viewer/src/: index.css  main.py  pyscript.toml
widgets/pdb/react-app/: package-lock.json  package.json
widgets/simple2/: README.md  package-lock.json  package.json
widgets/simple2/src/: index.html  (+1 more)
widgets/status/: narrative.js
widgets/workspace-status/:  README.md
(+113 files in other folders)
