[tool.poetry]
name = "servicewidgetdemo"
version = "0.1.0"
description = ""
authors = ["Erik Pearson <eapearson@lbl.gov>"]

[tool.poetry.dependencies]
python = "3.11.4"
cachetools = "5.3.1"
dicttoxml2 = "2.1.0"
fastapi = "0.100.1"
httpx = "0.24.1"
jinja2 = "3.1.2"
jinja2-tools = "1.0.7"
pymongo = "4.4.1"
PyYAML = "6.0.1"
toml = "0.10.2"
types-toml = "0.10.8.7"
uvicorn = "0.23.2"
xmltodict = "0.13.0"


[tool.poetry.dev-dependencies]
mongomock = "4.1.2"
mypy = "1.4.1"
pipdeptree = "2.12.0"
pyfakefs = "5.2.3"
pytest = "7.4.0"
pytest-cov = "4.1.0"
types-python-dateutil = "2.8.19.14"
types-PyYAML = "6.0.12.11"
types-cachetools = "5.3.0.6"
watchfiles = "0.19.0"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

